@@ -3,6 +3,9 @@
 	* avatarsay.c (say_line):
 	new function - handles underlining
 
+	* avatarsay.c (process_new_line):
+	function removed - handled now in say_line
+
 	* avatarsay.c (process_script):
 	a stripline may start the text (ie. empty lines after that count)
 
